# wordle_bot

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: Entropy.h  Utility.h  Wordle.h  Wordlist.h  feedback.h  wordlist.h
src/: Entropy.cpp  Main.cpp  Utility.cpp  Wordle.cpp  feedback.cpp  main.cpp
